--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hỏa táng thú cưng -TÂM TỊNH PET</title>
+    <title>HỎA TÁNG THÚ CƯNG -TÂM TỊNH PET</title>
     <link rel="icon" href="picter/favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
