--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Dịch vụ hỏa táng thú cưng Tâm Tịnh Pet uy tín, tận tâm tại TPHCM. Chúng tôi đồng hành cùng bạn trong những giây phút cuối cùng của thú cưng. Liên hệ ngay để được tư vấn.">
+         <meta name="description" content="Tâm Tịnh Pet cung cấp dịch vụ hỏa táng thú cưng chuyên nghiệp, tận tâm 24/7 tại TPHCM. Đón tận nhà, nghi lễ trang trọng, giao tro cốt miễn phí. Liên hệ 0378965935.">
     <title>HỎA TÁNG THÚ CƯNG -TÂM TỊNH PET</title>
     <link rel="icon" href="picter/favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
